--- a/Visual Studio Project Template C#/NppPlugin.html
+++ b/Visual Studio Project Template C#/NppPlugin.html
@@ -1,4 +1,24 @@
 <html>
+<head>
+    <title>Notepad++ Plugin Pack for .NET</title>
+    <!--<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Serif" />-->
+    <style>
+
+        html, body {
+            width: 100%;
+            height: 100%;
+            text-align: left;
+            font: 80%/1.5 "DroidSerifBold", Georgia, Times New Roman, serif;
+            color: #fff;
+            margin: 0px;
+            background: #e7a025;
+            background: radial-gradient(circle at 75% 10%, rgba(255, 255, 200, 0.1) 0%, rgba(255, 255, 200, 0.0) 60%), 
+                        linear-gradient(90deg,rgba(74,76,94,0) 250px, rgba(5,7,8,1) 250px, rgba(50,69,82,1) 252px, rgba(50,69,82,1) 80%), 
+                        radial-gradient(circle farthest-corner at top center, #e7a025 0%, #a76d14 80%);
+        }
+    </style>
+</head>
 <body>
-This is a Notepad++ plugin
-</body></html>
+    This is a Notepad++ plugin
+</body>
+</html>
